# libkeccak

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Readme.md  karma.conf.js  package.json
emscripten/: emscripten.keccak.post.js  makefile
include/keccak/: keccak.h
src/: keccak.c
test/: CMakeLists.txt  basic.test.js  gtest.cpp  main.cpp
test/data/: .gitattributes  keccak1600.csv  keccakf.csv  keccakf.json
test/shitsrc/: test.keccak.c  test.keccakf.c
